Agregando clientes para las pruebas del servidor de recursos.