@@ -7,6 +7,7 @@ import java.util.Map;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -22,15 +23,19 @@ public class AppController {
   private static final Logger log = LoggerFactory.getLogger(AppController.class);
 
   @GetMapping("/list")
-  public List<Message> listar() {
-    return Collections.singletonList(new Message("Test list"));
+  public List<Message> listar(Authentication authentication) {
+    log.info("Endpoint apit-list");
+    log.info("User logged: {}", authentication.getName());
+
+    return List.of(new Message("Test list"), new Message(authentication.getAuthorities().toString()));
   }
 
   @PostMapping("/create")
-  public Message create(@RequestBody Message message) {
-    log.info("mensaje guardado: {}", message);
+  public Message create(@RequestBody Message message, Authentication authentication) {
+    log.info("Endpoint apit-list");
+    log.info("User logged: {}", authentication.getName());
+    message.setText(message.getText() + " created: " + authentication.getAuthorities().toString());
     return message;
   }
-
 
 }
